--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "A secure, offline-first note-taking application.",
+  "author": "chayanmann",
+  "main": "dist/electron.cjs",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dist": "npm run build && electron-builder",
+    "dist:win": "npm run build && electron-builder --win"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -29,6 +34,7 @@
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.1",
     "electron": "^37.4.0",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -39,5 +45,25 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
     "wait-on": "^8.0.4"
+  },
+
+  "build": {
+    "appId": "com.yourname.syncnote",
+    "productName": "SyncNote",
+    "files": [
+      "dist/**/*"
+    ],
+    "directories": {
+      "output": "dist"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "src/assets/icon.jpg"
+
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "src/assets/icon.jpg"
+    }
   }
 }
